# Svalbard

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  environment.yml  mongod.conf  pyproject.toml  release_notes.md  setup.cfg
examples/: data_server.json  data_server_helpers.ipynb  data_server_local.json  demo.py  direct_use.py  get_many_documents.ipynb  helpers.py  launch.py
svalbard/: __init__.py  launch.py  typing.py
svalbard/aq_data.egg-info/: PKG-INFO  top_level.txt
svalbard/data_model/: __init__.py  _setting_types.py  compiler.py  data_file.py  device.py  instruments.py  ipc.py  memory_models.py  utility.py
svalbard/data_model/measurement/: __init__.py  channel.py  log_channel.py  lookup.py  measurement.py  relation.py  step_config.py  step_item.py  step_range.py
svalbard/data_router/: __init__.py  data_router.py
svalbard/data_server/: errors.py
svalbard/data_server/data_backend/: abstract_data_backend.py  fs_backend.py  gcs_backend.py
svalbard/data_server/frontend/: abstract_frontend.py  frontend_v1.py  sync_frontend_v1.py
svalbard/data_server/metadata_backend/: __init__.py  abstract_metadata_backend.py  mongodb_backend.py
svalbard/utility/: bson.py  constants.py  data_server_helper_functions.py  datasets_from_csv.py  logger.py  resize_array.py  saving.py  shared_array.py  str_helper.py
svalbard/utility/helpers/: ui_controls.py  ui_dialogs.py  ui_resources.py  ui_tools.py  ui_widgets.py
tests/: conftest.py  fixtures.py
tests/data_model/: fixtures.py  test_compiler.py  test_data_file.py  test_device.py  test_instruments.py  test_ipc.py  test_memory_models.py  test_settings_type.py  test_utility.py
tests/data_router/: fixtures.py  test_data_factory.py  test_data_router.py  utility.py
tests/data_server/: fixtures.py  utility.py
tests/utility/: test_bson.py  test_data_server_helper_functions.py  test_datasets_from_csv.py  test_ipc_rw_rlock.py  test_resize_array.py  test_saving.py  test_shared_array.py
(+28 files in other folders)
