[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
[tool.isort]
profile = "black"
[tool.pylint.messages_control]
extension-pkg-whitelist = ["pydantic", "rustworkx"]
good-names-rgxs = "^[_a-z][_a-z0-9]?$"
[tool.pylint.MASTER]
load-plugins = "pylint_pydantic"
