[metadata]
name = svalbard
version = 0.0.8
author = Brandur Thorgrimsson
author_email = brandur@atlantic-quantum.com
description = Data storage for measurement data by Atlantic Quantum
url = https://github.com/atlantic-quantum/Svalbard
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent
[options]
packages=find:
install_requires = 
    numpy
    scipy
    motor
    fsspec
    gcsfs
    zarr
    fastapi
    uvicorn
    httpx 
    rustworkx
    pydantic==1.10
    asteval
    colorama
    pandas
python_requires = >=3.10,<3.12
