[metadata]
name = svalbard
version = 0.2.0
author = Brandur Thorgrimsson
author_email = brandur@atlantic-quantum.com
description = Data storage for measurement data by Atlantic Quantum
url = https://github.com/atlantic-quantum/Svalbard
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent
[options]
packages=find:
install_requires = 
    numpy<2.0 
    scipy
    motor
    fsspec
    gcsfs
    zarr
    fastapi
    uvicorn
    httpx
    rustworkx
    pydantic
    asteval
    colorama
    pandas
    deprecated
    setproctitle
    orjson # fastapi and orjson are required for measurement executor
python_requires = >=3.10
[options.packages.find]
include = # so "tests" is not included as a package
    svalbard*
